css/style.css
/* ... */
  .btn:hover {
    color: white; }
  .btn:active {
    transform: translateY(0.2rem); }

.left {
  text-align: left; }

.pad-left {
  padding: 0 0 0 5rem; }
  @media only screen and (max-width: 56.25em) {
    .pad-left {
      padding: 0 0 0 0; } }

.bottom {
  object-position: bottom; }

.m-right {
  margin-right: 4rem; }

.left {
  object-position: left; }

@media (hover: hover) {
  .box-shadow {
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3); } }

@media (hover: hover) {
  .box-shadow:hover {
    transform: translateY(-1rem) scale(1.02);
    box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.6); } }

@media (hover: hover) {
  .btn-shadow {
    box-shadow: 0.2rem 0.25rem 1rem rgba(0, 0, 0, 0.4); } }

@media (hover: hover) {
  .btn-shadow:active {
    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.5); } }

.responsive-nav {
  height: 100vh;
  width: 100%;
  background: linear-gradient(to right top, var(--color-primary), var(--color-primary), var(--color-secondary));
  z-index: 99;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  position: fixed;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  align-items: center;
  right: -110%;
  transition: all .5s; }
  .responsive-nav ul {
    list-style: none;
    font-size: 4rem;
    text-align: center; }
  .responsive-nav li {
    padding: 3rem 0 3rem 0; }
    .responsive-nav li a {
      color: #000;
      transition: all .4s;
      position: relative;
      height: 7rem;
      width: calc(fit-content + 1rem); }
      .responsive-nav li a:hover {
        color: #fff; }
      .responsive-nav li a::after {
        content: '';
        position: absolute;
        background: #000;
        transform: skewX(-20deg);
        height: inherit;
        width: 0;
        left: 0;
        top: -1.7rem;
        transition: all .25s;
        z-index: -1;
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        margin-left: -20%;
        border-top: 4px solid var(--color-secondary);
        border-bottom: 4px solid var(--color-secondary); }
      .responsive-nav li a:hover::after {
        width: 140%; }

.nav__button {
  position: fixed;
  font-size: 3rem;
  right: -10rem;
  top: 4rem;
  background-color: var(--color-black);
  color: var(--color-white);
  padding: 1.4rem 2rem 4rem 2rem;
  border: 2px solid #000;
  z-index: 100;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  transform: rotate(90deg);
  transition: all .3s;
  cursor: pointer; }
  @media (hover: hover) {
    .nav__button {
      box-shadow: 0.4rem -0.4rem 1rem rgba(0, 0, 0, 0.4); } }
  @supports (-moz-appearance: none) {
    .nav__button {
      height: 7rem; } }
  @media only screen and (max-width: 37.5em) {
    .nav__button {
      top: 2rem; } }
  .nav__button .bar {
    height: .3rem;
    width: 90%;
    padding: 2 0;
    transition: all .3s; }

.visible {
  right: 0; }

.open {
  padding: 1.4rem 1.4rem 4rem 1.4rem; }
  .open * {
    padding: 0 .2rem; }

@keyframes borderBurst {
  0% {
    border: 2px solid #000; }
  25% {
    border: 2px solid var(--color-primary); }
  50% {
    border: 2px solid #000; }
  75% {
    border: 2px solid var(--color-primary); }
  100% {
    border: 2px solid #000; } }

.showBtn {
  animation: borderBurst 1.5s .5s;
  right: 4rem; }
  @media only screen and (max-width: 37.5em) {
    .showBtn {
      right: 2rem; } }

.rotate {
  transform: rotate(135deg); }

.scale {
  transform: scale(1.05); }

.header {
  height: 110vh;
  width: 100%;
  position: relative;
  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.4);
  background-color: var(--color-primary);
  overflow: hidden; }

.about {
  height: 110vh;
  width: 100%;
  min-height: 80rem;
  position: relative; }
  @media only screen and (max-width: 37.5em) {
    .about {
      height: 120vh; } }

.skills {
  width: 100%;
  overflow: hidden;
  position: relative;
  height: 110vh; }
  @media only screen and (max-width: 56.25em) {
    .skills {
      height: 134vh; } }

.work {
  width: 100%; }

.contact {
  height: 90vh;
  width: 100%;
  position: relative; }

